tests/feature_tests/snapshots/e2e__feature_tests__use_alias_not_installed__Zsh.snap
---
source: tests/feature_tests/mod.rs
expression: "&source.trim()"
---
set -e
eval "$(fnm --log-level='error' env)"
echo 'lts/*' > .node-version
fnm use 2>&1 | grep 'Requested version lts-latest is not currently installed'
